@@ -110,21 +110,23 @@ END
 // Dialog
 //
 
-IDD_OPTIONS DIALOGEX 0, 0, 237, 82
+IDD_OPTIONS DIALOGEX 0, 0, 267, 98
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,126,61,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,181,61,50,14
+    DEFPUSHBUTTON   "OK",IDOK,155,77,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,211,77,50,14
     CONTROL         "Enable toolbar",IDC_ENABLE_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,62,10
     CONTROL         "Enable search box",IDC_ENABLE_SEARCHBOX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,20,75,10
     CONTROL         "Resolve ghost windows to hung windows",IDC_RESOLVEGHOSTWINDOWS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,46,147,10
-    COMBOBOX        IDC_DISPLAYSTYLECOMBO,159,18,71,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Toolbar display style:",IDC_DISPLAYSTYLETEXT,158,7,70,8
+    COMBOBOX        IDC_DISPLAYSTYLECOMBO,182,18,78,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Toolbar display style:",IDC_DISPLAYSTYLETEXT,187,7,70,8
     CONTROL         "Enable status bar",IDC_ENABLE_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,33,72,10
-    PUSHBUTTON      "Customize Toolbar",IDC_CUSTOMIZETOOLBAR,7,61,70,14
+    PUSHBUTTON      "Customize Toolbar",IDC_CUSTOMIZETOOLBAR,7,77,70,14
+    COMBOBOX        IDC_SEARCHBOX_DISPLAYSTYLECOMBO,182,45,78,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Searchbox display style:",IDC_SEARCHBOX_DISPLAYSTYLETEXT,179,34,78,8
 END
 
 
@@ -139,9 +141,9 @@ BEGIN
     IDD_OPTIONS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 230
+        RIGHTMARGIN, 260
         TOPMARGIN, 7
-        BOTTOMMARGIN, 75
+        BOTTOMMARGIN, 91
     END
 END
 #endif    // APSTUDIO_INVOKED
