@@ -32,6 +32,8 @@
 #define IDC_DISPLAYSTYLETEXT            1005
 #define IDC_ENABLE_STATUSBAR            1006
 #define IDC_CUSTOMIZETOOLBAR            1007
+#define IDC_SEARCHBOX_DISPLAYSTYLECOMBO 1008
+#define IDC_SEARCHBOX_DISPLAYSTYLETEXT  1009
 #define ID_STATUS_CPUUSAGE              40001
 #define ID_STATUS_COMMITCHARGE          40002
 #define ID_STATUS_PHYSICALMEMORY        40003
